# SkillRadar

./: .gitignore  README.md  instructions.md  pyproject.toml
skillradar/cli/: main.py
skillradar/core/: pipeline.py
skillradar/core/analysis/: base.py  models.py
skillradar/core/extract/: base.py  models.py
skillradar/core/fetch/: base.py  hh.py  models.py
skillradar/core/normalize/: base.py  hh.py  models.py
skillradar/core/storage/: __init__.py  base.py  local.py  paths.py
tests/core/normalize/: test_hh_normalizer.py
tests/core/storage/: test_local_storage.py  test_local_storage_additions.py
